# Cinema

./: .gitignore  README.md  Wiki.txt  config.py  db_create.py  pyproject.toml  requirements.txt
app/: __init__.py  app.db  test.db
app/admin/: forms.py  models.py  views.py
app/basket/: views.py
app/cinema/: forms.py  models.py  views.py
app/customers/: forms.py  model.py  models.py  views.py
app/employee/: forms.py  models.py  views.py
app/templates/: navbar.html
app/templates/admin/: category.html  cmpmovies.html  cmpresults.html  index.html  login.html  moviesales.html  register.html  salesresults.html
app/templates/cinema/: addcategory.html  addmovie.html  addscreen.html  addticket.html  basket.html  confirm.html  index.html  movies.html  result.html  screen.html  seats.html  single_page.html  ticketTemplate.html  tickets.html  viewMovieDetails.html
app/templates/customer/: login.html  movie.html  order.html  pdf.html  register.html  tickets.html  viewMovieDetails.html
app/templates/employee/: basket.html  confirmqrcode.html  index.html  login.html  order.html  pdf.html  register.html  single_page.html
app/templates/till/: screeningSelect.html  ticketSelect.html  till.html
app/till/: forms.py  models.py  till.csv  views.py
tests/: test_admin.py  test_cinema.py  test_customer.py  test_employee.py  test_ticket.py  test_till.py
